--- a/day12/day12.cabal
+++ b/day12/day12.cabal
@@ -9,9 +9,17 @@ maintainer:         ken@friislarsen.net
 
 copyright: Ken Friis Larsen <ken@friislarsen.net>
 
-library
-    exposed-modules:  Day12
+-- library
+--     exposed-modules:  Main
 
+--     build-depends:    base ^>=4.14.3.0
+--                     , containers
+
+--     hs-source-dirs:   .
+--     default-language: Haskell2010
+
+executable day12
+    main-is: Day12.hs
     build-depends:    base ^>=4.14.3.0
                     , containers
 
