--- a/day16/day16.cabal
+++ b/day16/day16.cabal
@@ -11,11 +11,7 @@ copyright: Ken Friis Larsen <ken@friislarsen.net>
 
 executable day16
     main-is: day16.hs
-    build-depends:    array
-                    , base ^>=4.14.3.0
-                    , containers
-                    , psqueues
-                    , split
+    build-depends:    base ^>=4.14.3.0
 
     hs-source-dirs:   .
     default-language: Haskell2010
