--- a/day23/day23.cabal
+++ b/day23/day23.cabal
@@ -14,8 +14,10 @@ executable day23
     build-depends:    array
                     , base ^>=4.14.3.0
                     , containers
+                    , hashable
                     , psqueues
                     , split
+                    , unordered-containers
 
     hs-source-dirs:   .
     default-language: Haskell2010
