--- a/day15/day15.cabal
+++ b/day15/day15.cabal
@@ -25,7 +25,6 @@ executable day15
     import: deps
     main-is: Main.hs
     other-modules: Day15
-    build-depends: day15
     default-language: Haskell2010
 
 
@@ -34,7 +33,6 @@ benchmark bench-day15
     main-is:       BenchDay15.hs
     type:          exitcode-stdio-1.0
     other-modules: Day15
-    build-depends: day15
-                 , tasty-bench
+    build-depends: tasty-bench
     ghc-options:  "-with-rtsopts=-A32m"
     default-language: Haskell2010
