Improved day 21. This takes us below 0.5s for both parts

--- a/day21/day21.cabal
+++ b/day21/day21.cabal
@@ -12,7 +12,7 @@ copyright: Ken Friis Larsen <ken@friislarsen.net>
 executable day21
     main-is: day21.hs
     build-depends:    base ^>=4.14.3.0,
-                      memoize
+                      multiset
 
 
     hs-source-dirs:   .
